Add: second page & cards section

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,8 @@
 
 <app-navbar></app-navbar>
 <app-landing-page></app-landing-page>
+<app-second-page></app-second-page>
+<app-cards-carousels></app-cards-carousels>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * * -->
