--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -16,3 +16,22 @@
         </div>
     </div>
 </section>
+
+<section class="numbers-section">
+  <div class="max-w-screen-xl px-4 py-8 mx-auto text-center lg:py-16 lg:px-6">
+      <dl class="grid max-w-screen-md gap-8 mx-auto text-gray-900 sm:grid-cols-3 dark:text-white">
+          <div class="flex flex-col items-center justify-center">
+              <dt class="number-heading mb-2 text-3xl md:text-4xl font-extrabold">73M+</dt>
+              <dd class="number-text font-light text-gray-500 dark:text-gray-400">DEVELOPERS</dd>
+          </div>
+          <div class="flex flex-col items-center justify-center">
+              <dt class="number-heading mb-2 text-3xl md:text-4xl font-extrabold">1B+</dt>
+              <dd class="number-text font-light text-gray-500 dark:text-gray-400">CONTRIBUTORS</dd>
+          </div>
+          <div class="flex flex-col items-center justify-center">
+              <dt class="number-heading mb-2 text-3xl md:text-4xl font-extrabold">4M+</dt>
+              <dd class="number-text font-light text-gray-500 dark:text-gray-400">ORGANIZATIONS</dd>
+          </div>
+      </dl>
+  </div>
+</section>
