Add: categories card

--- a/src/app/second-page/second-page.component.html
+++ b/src/app/second-page/second-page.component.html
@@ -2,7 +2,7 @@
   <div class="py-8 px-4 mx-auto max-w-screen-xl sm:py-16 lg:px-6">
       <div class="text max-w-screen-md mb-8 lg:mb-16">
           <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900">WHAT’S IN IT FOR YOU?</h2>
-          <p class="text-gray-500 sm:text-xl">Here at Flowbite we focus on markets where technology, innovation, and capital can unlock long-term value and drive economic growth.</p>
+          <p class="text-gray-500 sm:text-xl">Unlock the potential for growth and success with our comprehensive suite of tools and resources. Join us today and take your learning journey to new heights!</p>
       </div>
       <div class="space-y-8 md:grid md:grid-cols-2 lg:grid-cols-3 md:gap-12 md:space-y-0">
           <div>
