--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,8 +1,8 @@
 <nav class="navbar bg-white border-gray-200 dark:bg-gray-900">
   <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
   <a class="flex items-center space-x-3 rtl:space-x-reverse" href="https://flowbite.com/">
-      <img alt="Flowbite Logo" class="h-8" src="https://flowbite.com/docs/images/logo.svg" />
-      <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Flowbite</span>
+
+      <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">CodeHub</span>
   </a>
   <div class="flex md:order-2">
     <button aria-controls="navbar-search" aria-expanded="false" class="md:hidden text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5 me-1" data-collapse-toggle="navbar-search" type="button">
