Add: testimonials, footer - not complete

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,7 @@
 <app-landing-page></app-landing-page>
 <app-second-page></app-second-page>
 <app-cards-carousels></app-cards-carousels>
+<app-testimonials></app-testimonials>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * * -->
