--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -3,7 +3,7 @@
         <div class="landing-text mr-auto place-self-center lg:col-span-7">
             <h1 class="landing-heading max-w-2xl mb-4 tracking-tight leading-none md:text-5xl xl:text-6xl dark:text-white">TAKE ADVANTAGE OF ONLINE LEARNING.</h1>
             <p class="landing-text text-gray-500 max-w-2xl mb-6 lg:mb-8 md:text-lg lg:text-xl dark:text-gray-400">Select the optimal course to suit your learning objectives with precision and purpose.</p>
-            <a href="#" class="get-started-button inline-flex items-center justify-center px-7 py-4 mr-4 text-base font-medium text-center text-white rounded-lg bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-red-300 dark:focus:ring-primary-900">
+            <a href="#" class="get-started-button inline-flex items-center justify-center px-7 py-4 mr-4 text-base font-medium text-center text-white rounded-lg bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-red-300">
                 Get Started
                 <svg class="w-5 h-5 ml-2 -mr-1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
             </a>
