Final commit before changing project structure

--- a/src/app/landing-page/landing-page.component.css
+++ b/src/app/landing-page/landing-page.component.css
@@ -46,3 +46,7 @@
   font-family: "Montserrat", sans-serif;
   color: #8D99AE;
 }
+
+#learning-objectives {
+  background-color: #EF233C; /* Change "green" to the desired color */
+}
