--- a/src/app/second-page/second-page.component.html
+++ b/src/app/second-page/second-page.component.html
@@ -1,4 +1,4 @@
-<section class="bg-white">
+<section id="learn-more" class="bg-white">
   <div class="py-8 px-4 mx-auto max-w-screen-xl sm:py-16 lg:px-6">
       <div class="text max-w-screen-md mb-8 lg:mb-16">
           <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900">WHAT’S IN IT FOR YOU?</h2>
