--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,15 +1,15 @@
 <section class="landing-page bg-white dark:bg-gray-900">
     <div class="grid max-w-screen-xl px-4 py-8 mx-auto lg:gap-8 xl:gap-0 lg:py-16 lg:grid-cols-12">
         <div class="landing-text mr-auto place-self-center lg:col-span-7">
-            <h1 class="landing-heading max-w-2xl mb-4 tracking-tight leading-none md:text-5xl xl:text-6xl dark:text-white">TAKE ADVANTAGE OF ONLINE LEARNING.</h1>
-            <p class="landing-text text-gray-500 max-w-2xl mb-6 lg:mb-8 md:text-lg lg:text-xl dark:text-gray-400">Select the optimal course to suit your learning objectives with precision and purpose.</p>
-            <a href="#" class="get-started-button inline-flex items-center justify-center px-7 py-4 mr-4 text-base font-medium text-center text-white rounded-lg bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-red-300">
-                Get Started
-                <svg class="w-5 h-5 ml-2 -mr-1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
-            </a>
-            <a href="#" class="learn-more-button inline-flex items-center justify-center px-7 py-4 text-base focus:ring-4 focus:ring-gray-300">
-                Learn More
-            </a>
+          <h1 class="landing-heading max-w-2xl mb-4 tracking-tight leading-none md:text-5xl xl:text-6xl dark:text-white">TAKE ADVANTAGE OF ONLINE LEARNING.</h1>
+          <p class="landing-text text-gray-500 max-w-2xl mb-6 lg:mb-8 md:text-lg lg:text-xl dark:text-gray-400">Select the optimal course to suit <span id="learning-objectives" class="px-2 text-white bg-blue-600 rounded dark:bg-blue-500">your learning objectives</span> with precision and purpose.</p>
+          <a href="#" class="get-started-button inline-flex items-center justify-center px-7 py-4 mr-4 text-base font-medium text-center text-white rounded-lg bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-red-300">
+            Get Started
+            <svg class="w-5 h-5 ml-2 -mr-1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
+          </a>
+          <a href="#learn-more" class="learn-more-button inline-flex items-center justify-center px-7 py-4 text-base focus:ring-4 focus:ring-gray-300">
+            Learn More
+          </a>
         </div>
         <div class="hidden lg:mt-0 lg:col-span-5 lg:flex">
             <img src="assets/landing-image.jpg" alt="mockup">
@@ -21,16 +21,16 @@
   <div class="max-w-screen-xl px-4 py-8 mx-auto text-center lg:py-16 lg:px-6">
       <dl class="grid max-w-screen-md gap-8 mx-auto text-gray-900 sm:grid-cols-3 dark:text-white">
           <div class="flex flex-col items-center justify-center">
-              <dt class="number-heading mb-2 text-3xl md:text-4xl font-extrabold">73M+</dt>
+              <dt class="number-heading mb-2 text-3xl md:text-4xl font-extrabold">1M+</dt>
+              <dd class="number-text font-light text-gray-500 dark:text-gray-400">STUDENTS</dd>
+          </div>
+          <div class="flex flex-col items-center justify-center">
+              <dt class="number-heading mb-2 text-3xl md:text-4xl font-extrabold">100K+</dt>
+              <dd class="number-text font-light text-gray-500 dark:text-gray-400">COURSES</dd>
+          </div>
+          <div class="flex flex-col items-center justify-center">
+              <dt class="number-heading mb-2 text-3xl md:text-4xl font-extrabold">1M+</dt>
               <dd class="number-text font-light text-gray-500 dark:text-gray-400">DEVELOPERS</dd>
-          </div>
-          <div class="flex flex-col items-center justify-center">
-              <dt class="number-heading mb-2 text-3xl md:text-4xl font-extrabold">1B+</dt>
-              <dd class="number-text font-light text-gray-500 dark:text-gray-400">CONTRIBUTORS</dd>
-          </div>
-          <div class="flex flex-col items-center justify-center">
-              <dt class="number-heading mb-2 text-3xl md:text-4xl font-extrabold">4M+</dt>
-              <dd class="number-text font-light text-gray-500 dark:text-gray-400">ORGANIZATIONS</dd>
           </div>
       </dl>
   </div>
