--- a/src/app/testimonials/testimonials.component.html
+++ b/src/app/testimonials/testimonials.component.html
@@ -3,57 +3,57 @@
 <section class="bg-white" xmlns="http://www.w3.org/1999/html">
   <div class="py-8 px-4 mx-auto max-w-screen-xl sm:py-16 lg:px-6">
     <h2 class="text text-center text-4xl font-bold tracking-tight text-gray-900 sm:text-5xl">
-      Reviews from our trusted customers.
+      Reviews from our students.
     </h2>
     <div class="grid mb-8 border border-gray-200 rounded-lg shadow-sm dark:border-gray-700 md:mb-12 md:grid-cols-2 bg-white dark:bg-gray-800">
         <figure class="flex flex-col items-center justify-center p-8 text-center bg-white border-b border-gray-200 rounded-t-lg md:rounded-t-none md:rounded-ss-lg md:border-e dark:bg-gray-800 dark:border-gray-700">
             <blockquote class="max-w-2xl mx-auto mb-4 text-gray-500 lg:mb-8 dark:text-gray-400">
                 <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Very easy this was to integrate</h3>
-                <p class="my-4">If you care for your time, I hands down would go with this."</p>
+                <p class="my-4">If you care for your time, I hands down would recommend this.</p>
             </blockquote>
             <figcaption class="flex items-center justify-center ">
                 <img class="rounded-full w-9 h-9" src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/avatars/karen-nelson.png" alt="profile picture">
                 <div class="space-y-0.5 font-medium dark:text-white text-left rtl:text-right ms-3">
-                    <div>Bonnie Green</div>
-                    <div class="text-sm text-gray-500 dark:text-gray-400 ">Developer at Open AI</div>
+                    <div>David Šťastný</div>
+                    <div class="text-sm text-gray-500 dark:text-gray-400 ">Developer at Google</div>
                 </div>
             </figcaption>
         </figure>
         <figure class="flex flex-col items-center justify-center p-8 text-center bg-white border-b border-gray-200 md:rounded-se-lg dark:bg-gray-800 dark:border-gray-700">
             <blockquote class="max-w-2xl mx-auto mb-4 text-gray-500 lg:mb-8 dark:text-gray-400">
-                <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Solid foundation for any project</h3>
-                <p class="my-4">Designing with Figma components that can be easily translated to the utility classes of Tailwind CSS is a huge timesaver!"</p>
+                <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Hasn’t learned a single thing</h3>
+                <p class="my-4">Designing with Figma components that can be real pain in the ass, don’t recommend this service. They also charged me $10000 for cancelling my membership!</p>
             </blockquote>
             <figcaption class="flex items-center justify-center ">
                 <img class="rounded-full w-9 h-9" src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/avatars/roberta-casas.png" alt="profile picture">
                 <div class="space-y-0.5 font-medium dark:text-white text-left rtl:text-right ms-3">
-                    <div>Roberta Casas</div>
+                    <div>Matyáš Martinko</div>
                     <div class="text-sm text-gray-500 dark:text-gray-400">Lead designer at Dropbox</div>
                 </div>
             </figcaption>
         </figure>
         <figure class="flex flex-col items-center justify-center p-8 text-center bg-white border-b border-gray-200 md:rounded-es-lg md:border-b-0 md:border-e dark:bg-gray-800 dark:border-gray-700">
             <blockquote class="max-w-2xl mx-auto mb-4 text-gray-500 lg:mb-8 dark:text-gray-400">
-                <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Mindblowing workflow</h3>
-                <p class="my-4">Aesthetically, the well designed components are beautiful and will undoubtedly level up your next application."</p>
+                <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Stupid, dumb and trash</h3>
+                <p class="my-4">Useless website, don’t pay them a single dime!</p>
             </blockquote>
             <figcaption class="flex items-center justify-center ">
                 <img class="rounded-full w-9 h-9" src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/avatars/jese-leos.png" alt="profile picture">
                 <div class="space-y-0.5 font-medium dark:text-white text-left rtl:text-right ms-3">
-                    <div>Jese Leos</div>
+                    <div>Tomas Natale</div>
                     <div class="text-sm text-gray-500 dark:text-gray-400">Software Engineer at Facebook</div>
                 </div>
             </figcaption>
         </figure>
         <figure class="flex flex-col items-center justify-center p-8 text-center bg-white border-gray-200 rounded-b-lg md:rounded-se-lg dark:bg-gray-800 dark:border-gray-700">
             <blockquote class="max-w-2xl mx-auto mb-4 text-gray-500 lg:mb-8 dark:text-gray-400">
-                <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Efficient Collaborating</h3>
-                <p class="my-4">You have many examples that can be used to create a fast prototype for your team."</p>
+                <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Very hard to use</h3>
+                <p class="my-4">This website is very hard to use, almost every feature is not working.</p>
             </blockquote>
             <figcaption class="flex items-center justify-center ">
                 <img class="rounded-full w-9 h-9" src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/avatars/joseph-mcfall.png" alt="profile picture">
                 <div class="space-y-0.5 font-medium dark:text-white text-left rtl:text-right ms-3">
-                    <div>Joseph McFall</div>
+                    <div>Jonáš Kozumplík</div>
                     <div class="text-sm text-gray-500 dark:text-gray-400">CTO at Google</div>
                 </div>
             </figcaption>
@@ -68,7 +68,7 @@
         <h2 class="font-bold text-3xl xl:text-4xl leading-snug">
             Kickstart your coding journey today!<br>Join thousands of happy fellow developers.
         </h2>
-        <a class="get-started-button xl:mt-12 px-12 py-5 inline-block border border-transparent focus:ring-4 focus:ring-red-300" href="">
+        <a class="get-started-button xl:mt-12 px-8 py-3 inline-block border border-transparent focus:ring-4 focus:ring-red-300" href="">
           Get started!
         </a>
         <div class="mt-14 xl:mt-20">
