Fix: project structure

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,9 +9,7 @@
 
 <app-navbar></app-navbar>
 <app-landing-page></app-landing-page>
-<app-second-page></app-second-page>
-<app-cards-carousels></app-cards-carousels>
-<app-testimonials></app-testimonials>
+<app-footer></app-footer>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * * -->
