--- a/src/app/pages/landing-page/landing-page.component.html
+++ b/src/app/pages/landing-page/landing-page.component.html
@@ -1,14 +1,111 @@
-<!-- Featured Courses -->
+<!-- Hero section start -->
+<section class="landing-page bg-white dark:bg-gray-900">
+    <div class="grid max-w-screen-xl px-4 py-8 mx-auto lg:gap-8 xl:gap-0 lg:py-16 lg:grid-cols-12">
+        <div class="landing-text mr-auto place-self-center lg:col-span-7">
+          <h1 class="landing-heading max-w-2xl mb-4 tracking-tight leading-none md:text-5xl xl:text-6xl dark:text-white">TAKE ADVANTAGE OF ONLINE LEARNING.</h1>
+          <p class="landing-text text-gray-500 max-w-2xl mb-6 lg:mb-8 md:text-lg lg:text-xl dark:text-gray-400">Select the optimal course to suit <span id="learning-objectives" class="px-2 text-white bg-blue-600 rounded dark:bg-blue-500">your learning objectives</span> with precision and purpose.</p>
+          <a href="#" class="get-started-button inline-flex items-center justify-center px-7 py-4 mr-4 text-base font-medium text-center text-white rounded-lg bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-red-300">
+            Get Started
+            <svg class="w-5 h-5 ml-2 -mr-1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
+          </a>
+          <a href="#learn-more" class="learn-more-button inline-flex items-center justify-center px-7 py-4 text-base focus:ring-4 focus:ring-gray-300">
+            Learn More
+          </a>
+        </div>
+        <div class="hidden lg:mt-0 lg:col-span-5 lg:flex">
+            <img src="../../../assets/landing-image.jpg" alt="mockup">
+        </div>
+    </div>
+</section>
+<!-- Hero section end -->
+
+<!-- Numbers section start -->
+<section class="numbers-section">
+  <div class="max-w-screen-xl px-4 py-8 mx-auto text-center lg:py-16 lg:px-6">
+      <dl class="grid max-w-screen-md gap-8 mx-auto text-gray-900 sm:grid-cols-3 dark:text-white">
+          <div class="flex flex-col items-center justify-center">
+              <dt class="number-heading mb-2 text-3xl md:text-4xl font-extrabold">1M+</dt>
+              <dd class="number-text font-light text-gray-500 dark:text-gray-400">STUDENTS</dd>
+          </div>
+          <div class="flex flex-col items-center justify-center">
+              <dt class="number-heading mb-2 text-3xl md:text-4xl font-extrabold">100K+</dt>
+              <dd class="number-text font-light text-gray-500 dark:text-gray-400">COURSES</dd>
+          </div>
+          <div class="flex flex-col items-center justify-center">
+              <dt class="number-heading mb-2 text-3xl md:text-4xl font-extrabold">1M+</dt>
+              <dd class="number-text font-light text-gray-500 dark:text-gray-400">DEVELOPERS</dd>
+          </div>
+      </dl>
+  </div>
+</section>
+<!-- Numbers section end -->
+
+<!-- About section start -->
+<section id="learn-more" class="bg-white">
+  <div class="py-8 px-4 mx-auto max-w-screen-xl sm:py-16 lg:px-6">
+      <div class="text max-w-screen-md mb-8 lg:mb-16">
+          <h2 class="heading mb-4 text-4xl tracking-tight font-extrabold text-gray-900">WHAT’S IN IT FOR YOU?</h2>
+          <p class="text-gray-500 sm:text-xl">Unlock the potential for growth and success with our comprehensive suite of tools and resources. Join us today and take your learning journey to new heights!</p>
+      </div>
+      <div class="space-y-8 md:grid md:grid-cols-2 lg:grid-cols-3 md:gap-12 md:space-y-0">
+          <div>
+              <div class="work-icons flex justify-center items-center mb-4 w-10 h-10 rounded-full bg-red-500 lg:h-12 lg:w-12">
+                  <svg class="w-5 h-5 text-primary-600 lg:w-6 lg:h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3 3a1 1 0 000 2v8a2 2 0 002 2h2.586l-1.293 1.293a1 1 0 101.414 1.414L10 15.414l2.293 2.293a1 1 0 001.414-1.414L12.414 15H15a2 2 0 002-2V5a1 1 0 100-2H3zm11.707 4.707a1 1 0 00-1.414-1.414L10 9.586 8.707 8.293a1 1 0 00-1.414 0l-2 2a1 1 0 101.414 1.414L8 10.414l1.293 1.293a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>
+              </div>
+              <h3 class="mb-2 text-xl font-bold">Virtual Learning</h3>
+              <p class="text-gray-500">Plan it, create it, launch it. Collaborate seamlessly with all  the organization and hit your marketing goals every month with our marketing plan.</p>
+          </div>
+          <div>
+              <div class="work-icons flex justify-center items-center mb-4 w-10 h-10 rounded-full bg-red-500 lg:h-12 lg:w-12">
+                  <svg class="w-5 h-5 text-primary-600 lg:w-6 lg:h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M10.394 2.08a1 1 0 00-.788 0l-7 3a1 1 0 000 1.84L5.25 8.051a.999.999 0 01.356-.257l4-1.714a1 1 0 11.788 1.838L7.667 9.088l1.94.831a1 1 0 00.787 0l7-3a1 1 0 000-1.838l-7-3zM3.31 9.397L5 10.12v4.102a8.969 8.969 0 00-1.05-.174 1 1 0 01-.89-.89 11.115 11.115 0 01.25-3.762zM9.3 16.573A9.026 9.026 0 007 14.935v-3.957l1.818.78a3 3 0 002.364 0l5.508-2.361a11.026 11.026 0 01.25 3.762 1 1 0 01-.89.89 8.968 8.968 0 00-5.35 2.524 1 1 0 01-1.4 0zM6 18a1 1 0 001-1v-2.065a8.935 8.935 0 00-2-.712V17a1 1 0 001 1z"></path></svg>
+              </div>
+              <h3 class="mb-2 text-xl font-bold">Free Courses</h3>
+              <p class="text-gray-500">Protect your organization, devices and stay compliant with our structured workflows and custom permissions made for you.</p>
+          </div>
+          <div>
+              <div class="work-icons flex justify-center items-center mb-4 w-10 h-10 rounded-full bg-red-500 lg:h-12 lg:w-12">
+                  <svg class="w-5 h-5 text-primary-600 lg:w-6 lg:h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M6 6V5a3 3 0 013-3h2a3 3 0 013 3v1h2a2 2 0 012 2v3.57A22.952 22.952 0 0110 13a22.95 22.95 0 01-8-1.43V8a2 2 0 012-2h2zm2-1a1 1 0 011-1h2a1 1 0 011 1v1H8V5zm1 5a1 1 0 011-1h.01a1 1 0 110 2H10a1 1 0 01-1-1z" clip-rule="evenodd"></path><path d="M2 13.692V16a2 2 0 002 2h12a2 2 0 002-2v-2.308A24.974 24.974 0 0110 15c-2.796 0-5.487-.46-8-1.308z"></path></svg>
+              </div>
+              <h3 class="mb-2 text-xl font-bold">Online Curriculum</h3>
+              <p class="text-gray-500">Auto-assign tasks, send Slack messages, and much more. Now power up with hundreds of new templates to help you get started.</p>
+          </div>
+          <div>
+              <div class="work-icons flex justify-center items-center mb-4 w-10 h-10 rounded-full bg-red-500 lg:h-12 lg:w-12">
+                  <svg class="w-5 h-5 text-primary-600 lg:w-6 lg:h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M8.433 7.418c.155-.103.346-.196.567-.267v1.698a2.305 2.305 0 01-.567-.267C8.07 8.34 8 8.114 8 8c0-.114.07-.34.433-.582zM11 12.849v-1.698c.22.071.412.164.567.267.364.243.433.468.433.582 0 .114-.07.34-.433.582a2.305 2.305 0 01-.567.267z"></path><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-13a1 1 0 10-2 0v.092a4.535 4.535 0 00-1.676.662C6.602 6.234 6 7.009 6 8c0 .99.602 1.765 1.324 2.246.48.32 1.054.545 1.676.662v1.941c-.391-.127-.68-.317-.843-.504a1 1 0 10-1.51 1.31c.562.649 1.413 1.076 2.353 1.253V15a1 1 0 102 0v-.092a4.535 4.535 0 001.676-.662C13.398 13.766 14 12.991 14 12c0-.99-.602-1.765-1.324-2.246A4.535 4.535 0 0011 9.092V7.151c.391.127.68.317.843.504a1 1 0 101.511-1.31c-.563-.649-1.413-1.076-2.354-1.253V5z" clip-rule="evenodd"></path></svg>
+              </div>
+              <h3 class="mb-2 text-xl font-bold">Completion Certificate</h3>
+              <p class="text-gray-500">Audit-proof software built for critical financial operations like month-end close and quarterly budgeting.</p>
+          </div>
+          <div>
+              <div class="work-icons flex justify-center items-center mb-4 w-10 h-10 rounded-full bg-red-500 lg:h-12 lg:w-12">
+                  <svg class="w-5 h-5 text-primary-600 lg:w-6 lg:h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M7 3a1 1 0 000 2h6a1 1 0 100-2H7zM4 7a1 1 0 011-1h10a1 1 0 110 2H5a1 1 0 01-1-1zM2 11a2 2 0 012-2h12a2 2 0 012 2v4a2 2 0 01-2 2H4a2 2 0 01-2-2v-4z"></path></svg>
+              </div>
+              <h3 class="mb-2 text-xl font-bold">Progress Tracking</h3>
+              <p class="text-gray-500">Craft beautiful, delightful experiences for both marketing and product with real cross-company collaboration.</p>
+          </div>
+          <div>
+              <div class="work-icons flex justify-center items-center mb-4 w-10 h-10 rounded-full bg-red-500 lg:h-12 lg:w-12">
+                  <svg class="w-5 h-5 text-primary-600 lg:w-6 lg:h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M11.49 3.17c-.38-1.56-2.6-1.56-2.98 0a1.532 1.532 0 01-2.286.948c-1.372-.836-2.942.734-2.106 2.106.54.886.061 2.042-.947 2.287-1.561.379-1.561 2.6 0 2.978a1.532 1.532 0 01.947 2.287c-.836 1.372.734 2.942 2.106 2.106a1.532 1.532 0 012.287.947c.379 1.561 2.6 1.561 2.978 0a1.533 1.533 0 012.287-.947c1.372.836 2.942-.734 2.106-2.106a1.533 1.533 0 01.947-2.287c1.561-.379 1.561-2.6 0-2.978a1.532 1.532 0 01-.947-2.287c.836-1.372-.734-2.942-2.106-2.106a1.532 1.532 0 01-2.287-.947zM10 13a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"></path></svg>
+              </div>
+              <h3 class="mb-2 text-xl font-bold">Self-Paced Modules</h3>
+              <p class="text-gray-500">Keep your company’s lights on with customizable, iterative, and structured workflows built for all efficient teams and individual.</p>
+          </div>
+      </div>
+  </div>
+</section>
+<!-- About section end -->
+
+<!-- Featured courses section start -->
 <section class="bg-white" xmlns="http://www.w3.org/1999/html">
   <div class="py-8 px-4 mx-auto max-w-screen-xl sm:py-16 lg:px-6">
       <div class="text max-w-screen-md mb-8 lg:mb-16">
-          <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900">FEATURED COURSES</h2>
+          <h2 class="heading mb-4 text-4xl tracking-tight font-extrabold text-gray-900">FEATURED COURSES</h2>
           <p class=" cards-text text-gray-500 sm:text-xl"> Delve into our handpicked selection of top-tier offerings, or venture into our expansive library for a wealth of learning possibilities. Your next great learning adventure awaits!</p>
       </div>
       <div class="cards-grid space-y-8 md:grid md:grid-cols-2 lg:grid-cols-3 md:gap-12 md:space-y-0">
         <div class="card max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
           <a href="#">
-              <img class="rounded-t-lg" src="assets/landing-image.jpg" alt="" />
+              <img class="rounded-t-lg" src="../../../assets/landing-image.jpg" alt="" />
           </a>
           <div class="card-div p-5">
             <div class="badges">
@@ -17,7 +114,7 @@
               <span class="ww bg-yellow-100 text-yellow-800 text-xs font-medium me-1 px-2.5 py-0.5 rounded dark:bg-yellow-900 dark:text-yellow-300">javascript</span>
             </div>
               <a href="#">
-                  <h5 class="heading mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Web development basics</h5>
+                  <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Web development basics</h5>
               </a>
               <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
                 Build your first website from scratch and kickstart your journey into web development.
@@ -32,7 +129,7 @@
         </div>
         <div class="card max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
           <a href="#">
-              <img class="rounded-t-lg" src="assets/landing-image.jpg" alt="" />
+              <img class="rounded-t-lg" src="../../../assets/landing-image.jpg" alt="" />
           </a>
           <div class="card-div p-5">
             <div class="badges">
@@ -56,7 +153,7 @@
         </div>
         <div class="card max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
           <a href="#">
-              <img class="rounded-t-lg" src="assets/landing-image.jpg" alt="" />
+              <img class="rounded-t-lg" src="../../../assets/landing-image.jpg" alt="" />
           </a>
           <div class="card-div p-5">
             <div class="badges">
@@ -81,12 +178,13 @@
       </div>
   </div>
 </section>
+<!-- Featured courses section end -->
 
-<!-- Categories Cards -->
+<!-- Categories section start -->
 <section class="bg-white" xmlns="http://www.w3.org/1999/html">
   <div class="py-8 px-4 mx-auto max-w-screen-xl sm:py-16 lg:px-6">
     <div class="text max-w-screen-md mb-8 lg:mb-16">
-          <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900">CATEGORIES</h2>
+          <h2 class="heading mb-4 text-4xl tracking-tight font-extrabold text-gray-900">CATEGORIES</h2>
           <p class="cards-text text-gray-500 sm:text-xl"> Delve into our handpicked selection of top-tier offerings, or venture into our expansive library for a wealth of learning possibilities. Your next great learning adventure awaits!</p>
     </div>
     <div class="cards-grid space-y-8 md:grid md:grid-cols-2 lg:grid-cols-3 md:gap-12 md:space-y-0">
@@ -204,3 +302,68 @@
     </p>
   </div>
 </section>
+<!-- Categories section end -->
+
+<!-- Testimonials section start -->
+<section class="bg-white" xmlns="http://www.w3.org/1999/html">
+  <div class="py-8 px-4 mx-auto max-w-screen-xl sm:py-16 lg:px-6">
+    <h2 class="heading text text-center text-4xl font-bold tracking-tight text-gray-900 sm:text-5xl">
+      Reviews from our students.
+    </h2>
+    <div class="grid mb-8 border border-gray-200 rounded-lg shadow-sm dark:border-gray-700 md:mb-12 md:grid-cols-2 bg-white dark:bg-gray-800">
+        <figure class="flex flex-col items-center justify-center p-8 text-center bg-white border-b border-gray-200 rounded-t-lg md:rounded-t-none md:rounded-ss-lg md:border-e dark:bg-gray-800 dark:border-gray-700">
+            <blockquote class="max-w-2xl mx-auto mb-4 text-gray-500 lg:mb-8 dark:text-gray-400">
+                <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Very easy this was to integrate</h3>
+                <p class="my-4">If you care for your time, I hands down would recommend this.</p>
+            </blockquote>
+            <figcaption class="flex items-center justify-center ">
+                <img class="rounded-full w-9 h-9" src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/avatars/karen-nelson.png" alt="profile picture">
+                <div class="space-y-0.5 font-medium dark:text-white text-left rtl:text-right ms-3">
+                    <div>David Šťastný</div>
+                    <div class="text-sm text-gray-500 dark:text-gray-400 ">Developer at Google</div>
+                </div>
+            </figcaption>
+        </figure>
+        <figure class="flex flex-col items-center justify-center p-8 text-center bg-white border-b border-gray-200 md:rounded-se-lg dark:bg-gray-800 dark:border-gray-700">
+            <blockquote class="max-w-2xl mx-auto mb-4 text-gray-500 lg:mb-8 dark:text-gray-400">
+                <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Hasn’t learned a single thing</h3>
+                <p class="my-4">Designing with Figma components that can be real pain in the ass, don’t recommend this service. They also charged me $10000 for cancelling my membership!</p>
+            </blockquote>
+            <figcaption class="flex items-center justify-center ">
+                <img class="rounded-full w-9 h-9" src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/avatars/roberta-casas.png" alt="profile picture">
+                <div class="space-y-0.5 font-medium dark:text-white text-left rtl:text-right ms-3">
+                    <div>Matyáš Martinko</div>
+                    <div class="text-sm text-gray-500 dark:text-gray-400">Lead designer at Dropbox</div>
+                </div>
+            </figcaption>
+        </figure>
+        <figure class="flex flex-col items-center justify-center p-8 text-center bg-white border-b border-gray-200 md:rounded-es-lg md:border-b-0 md:border-e dark:bg-gray-800 dark:border-gray-700">
+            <blockquote class="max-w-2xl mx-auto mb-4 text-gray-500 lg:mb-8 dark:text-gray-400">
+                <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Stupid, dumb and trash</h3>
+                <p class="my-4">Useless website, don’t pay them a single dime!</p>
+            </blockquote>
+            <figcaption class="flex items-center justify-center ">
+                <img class="rounded-full w-9 h-9" src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/avatars/jese-leos.png" alt="profile picture">
+                <div class="space-y-0.5 font-medium dark:text-white text-left rtl:text-right ms-3">
+                    <div>Tomas Natale</div>
+                    <div class="text-sm text-gray-500 dark:text-gray-400">Software Engineer at Facebook</div>
+                </div>
+            </figcaption>
+        </figure>
+        <figure class="flex flex-col items-center justify-center p-8 text-center bg-white border-gray-200 rounded-b-lg md:rounded-se-lg dark:bg-gray-800 dark:border-gray-700">
+            <blockquote class="max-w-2xl mx-auto mb-4 text-gray-500 lg:mb-8 dark:text-gray-400">
+                <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Very hard to use</h3>
+                <p class="my-4">This website is very hard to use, almost every feature is not working.</p>
+            </blockquote>
+            <figcaption class="flex items-center justify-center ">
+                <img class="rounded-full w-9 h-9" src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/avatars/joseph-mcfall.png" alt="profile picture">
+                <div class="space-y-0.5 font-medium dark:text-white text-left rtl:text-right ms-3">
+                    <div>Jonáš Kozumplík</div>
+                    <div class="text-sm text-gray-500 dark:text-gray-400">CTO at Google</div>
+                </div>
+            </figcaption>
+        </figure>
+    </div>
+  </div>
+</section>
+<!-- Testimonials section end -->
