--- a/src/app/pages/landing-page/landing-page.component.html
+++ b/src/app/pages/landing-page/landing-page.component.html
@@ -12,7 +12,7 @@
             Learn More
           </a>
         </div>
-        <div class="hidden lg:mt-0 lg:col-span-5 lg:flex">
+        <div class="hero-image hidden lg:mt-0 lg:col-span-5 lg:flex">
             <img src="../../../assets/landing-image.jpg" alt="mockup">
         </div>
     </div>
@@ -105,7 +105,7 @@
       <div class="cards-grid space-y-8 md:grid md:grid-cols-2 lg:grid-cols-3 md:gap-12 md:space-y-0">
         <div class="card max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
           <a href="#">
-              <img class="rounded-t-lg" src="../../../assets/landing-image.jpg" alt="" />
+              <img class="card-course-image rounded-t-lg" src="../../../assets/landing-image.jpg" alt="" />
           </a>
           <div class="card-div p-5">
             <div class="badges">
@@ -129,7 +129,7 @@
         </div>
         <div class="card max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
           <a href="#">
-              <img class="rounded-t-lg" src="../../../assets/landing-image.jpg" alt="" />
+              <img class="card-course-image card-course-image rounded-t-lg" src="../../../assets/landing-image.jpg" alt="" />
           </a>
           <div class="card-div p-5">
             <div class="badges">
@@ -153,7 +153,7 @@
         </div>
         <div class="card max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
           <a href="#">
-              <img class="rounded-t-lg" src="../../../assets/landing-image.jpg" alt="" />
+              <img class="card-course-image rounded-t-lg" src="../../../assets/landing-image.jpg" alt="" />
           </a>
           <div class="card-div p-5">
             <div class="badges">
@@ -204,7 +204,7 @@
                 </svg>
             </a>
         </div>
-    </div>
+      </div>
       <div class="cards-grid space-y-8 md:grid md:grid-cols-1 lg:grid-cols-1 md:gap-12 md:space-y-0">
         <div class="max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
             <svg class="w-36px] h-[36px] text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
