--- a/src/app/pages/landing-page/landing-page.component.html
+++ b/src/app/pages/landing-page/landing-page.component.html
@@ -4,7 +4,7 @@
         <div class="landing-text mr-auto place-self-center lg:col-span-7">
           <h1 class="landing-heading max-w-2xl mb-4 tracking-tight leading-none md:text-5xl xl:text-6xl dark:text-white">TAKE ADVANTAGE OF ONLINE LEARNING.</h1>
           <p class="landing-text text-gray-500 max-w-2xl mb-6 lg:mb-8 md:text-lg lg:text-xl dark:text-gray-400">Select the optimal course to suit <span id="learning-objectives" class="px-2 text-white bg-blue-600 rounded dark:bg-blue-500">your learning objectives</span> with precision and purpose.</p>
-          <a href="#" class="get-started-button inline-flex items-center justify-center px-7 py-4 mr-4 text-base font-medium text-center text-white rounded-lg bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-red-300">
+          <a href="/signup" class="get-started-button inline-flex items-center justify-center px-7 py-4 mr-4 text-base font-medium text-center text-white rounded-lg bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-red-300">
             Get Started
             <svg class="w-5 h-5 ml-2 -mr-1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
           </a>
@@ -184,7 +184,7 @@
 <section class="bg-white" xmlns="http://www.w3.org/1999/html">
   <div class="py-8 px-4 mx-auto max-w-screen-xl sm:py-16 lg:px-6">
     <div class="text max-w-screen-md mb-8 lg:mb-16">
-          <h2 class="heading mb-4 text-4xl tracking-tight font-extrabold text-gray-900">CATEGORIES</h2>
+          <h2 id="categories" class="heading mb-4 text-4xl tracking-tight font-extrabold text-gray-900">CATEGORIES</h2>
           <p class="cards-text text-gray-500 sm:text-xl"> Delve into our handpicked selection of top-tier offerings, or venture into our expansive library for a wealth of learning possibilities. Your next great learning adventure awaits!</p>
     </div>
     <div class="cards-grid space-y-8 md:grid md:grid-cols-2 lg:grid-cols-3 md:gap-12 md:space-y-0">
