--- a/angular-app/src/app/components/footer/footer.component.html
+++ b/angular-app/src/app/components/footer/footer.component.html
@@ -4,7 +4,7 @@
         <h2 class="font-bold text-3xl xl:text-4xl leading-snug">
             Kickstart your coding journey today!<br>Join thousands of happy fellow developers.
         </h2>
-        <a class="get-started-button xl:mt-12 px-8 py-3 inline-block border border-transparent focus:ring-4 focus:ring-red-300" href="/signup">
+        <a class="get-started-button rounded-lg xl:mt-12 px-8 py-3 inline-block border border-transparent focus:ring-4 focus:ring-red-300 hover:opacity-90" href="/signup">
           Get started!
         </a>
         <div class="mt-14 xl:mt-20">
