--- a/angular-app/src/app/components/navbar/navbar.component.css
+++ b/angular-app/src/app/components/navbar/navbar.component.css
@@ -28,3 +28,14 @@
 #search-form {
   max-width: 500px; /* Adjust the width as needed */
 }
+
+input {
+  color: #2B2D42;
+  outline: none; /* Remove default focus outline */
+}
+
+/* Focus styles for the input */
+input:focus {
+  border-color: #2B2D42; /* Change border color on focus */
+  box-shadow: 0 0 0 2px rgba(49, 130, 206, 0.5); /* Add a focus ring */
+}
