--- a/angular-app/src/app/pages/landing-page/landing-page.component.css
+++ b/angular-app/src/app/pages/landing-page/landing-page.component.css
@@ -27,7 +27,6 @@
 .get-started-button {
   background-color: #EF233C;
   color: #FFFFFF;
-  border-radius: 16px;
   font-size: 1.25rem;
   font-weight: 600;
 }
@@ -35,20 +34,15 @@
 .learn-more-button {
   background-color: #2B2D42;
   color: #FFFFFF;
-  border-radius: 16px;
   font-size: 1.25rem;
   font-weight: 600;
 }
 
 .get-started-button:hover {
-  background-color: #D90429;
-  transform: scale(1.01); /* Scale the button slightly on hover */
   transition: ease-in-out 0.2s; /* Add a smooth transition */
 }
 
 .learn-more-button:hover {
-  background-color: #1E1F2A;
-  transform: scale(1.01);
   transition: ease-in-out 0.2s;
 }
 /* Hero section end */
@@ -110,3 +104,11 @@
 #categories {
   scroll-margin-top: 10vw; /* Adjust the value as needed */
 }
+
+.course-button {
+  background-color: #2B2D42;
+  color: #FFFFFF;
+  font-size: 0.85rem;
+  font-weight: 600;
+}
+
