--- a/angular-app/src/app/pages/landing-page/landing-page.component.html
+++ b/angular-app/src/app/pages/landing-page/landing-page.component.html
@@ -3,12 +3,12 @@
     <div class="grid max-w-screen-xl px-4 py-8 mx-auto lg:gap-8 xl:gap-0 lg:py-16 lg:grid-cols-12">
         <div class="landing-text mr-auto place-self-center lg:col-span-7">
           <h1 class="landing-heading max-w-2xl mb-4 tracking-tight leading-none md:text-5xl xl:text-6xl">TAKE ADVANTAGE OF ONLINE LEARNING.</h1>
-          <p class="landing-text text-gray-500 max-w-2xl mb-6 lg:mb-8 md:text-lg lg:text-xl">Select the optimal course to suit <span id="learning-objectives" class="px-2 text-white bg-blue-600 rounded">your learning objectives</span> with precision and purpose.</p>
-          <a href="/signup" class="get-started-button inline-flex items-center justify-center px-7 py-4 mr-4 text-base font-medium text-center text-white rounded-lg bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-red-300">
+          <p class="landing-text text-gray-500 max-w-2xl mb-6 lg:mb-8 md:text-lg lg:text-xl">Select the optimal course to suit <span id="learning-objectives" class="underlined px-2 text-white bg-blue-600 rounded">your learning objectives</span> with precision and purpose.</p>
+          <a href="/signup" class="get-started-button rounded-lg inline-flex items-center justify-center px-7 py-4 mr-4 text-base font-medium text-center text-white hover:opacity-90 focus:ring-4 focus:ring-red-300">
             Get Started
             <svg class="w-5 h-5 ml-2 -mr-1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
           </a>
-          <a href="#learn-more" class="learn-more-button inline-flex items-center justify-center px-7 py-4 text-base focus:ring-4 focus:ring-gray-300">
+          <a href="#learn-more" class="rounded-lg learn-more-button inline-flex items-center justify-center px-7 py-4 text-base focus:ring-4 focus:ring-gray-300 hover:opacity-90">
             Learn More
           </a>
         </div>
@@ -119,7 +119,7 @@
               <p class="mb-3 font-normal text-gray-700">
                 Build your first website from scratch and kickstart your journey into web development.
               </p>
-              <a href="#" class="button inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300">
+              <a href="#" class="course-button button inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:opacity-90">
                   View Course
                    <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                       <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
@@ -143,7 +143,7 @@
               <p class="mb-3 font-normal text-gray-700">
                 Discover the power of Python programming with hands-on exercises and projects.
               </p>
-              <a href="#" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300">
+              <a href="#" class="course-button button inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:opacity-90">
                   View Course
                    <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                       <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
@@ -167,7 +167,7 @@
               <p class="mb-3 font-normal text-gray-700">
                 Unlock the potential of machine learning with this introductory course.
               </p>
-              <a href="#" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300">
+              <a href="#" class="course-button button inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:opacity-90">
                   View Course
                    <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                       <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
@@ -308,7 +308,7 @@
 <section class="bg-white" xmlns="http://www.w3.org/1999/html">
   <div class="py-8 px-4 mx-auto max-w-screen-xl sm:py-16 lg:px-6">
     <h2 class="heading text text-center text-4xl font-bold tracking-tight text-gray-900 sm:text-5xl">
-      Reviews from our students.
+      Reviews from our <span class="underline underline-offset-3 decoration-8 decoration-blue-400 dark:decoration-blue-600">students.</span>
     </h2>
     <div class="grid mb-8 border border-gray-200 rounded-lg shadow-sm md:mb-12 md:grid-cols-2 bg-white">
         <figure class="flex flex-col items-center justify-center p-8 text-center bg-white border-b border-gray-200 rounded-t-lg md:rounded-t-none md:rounded-ss-lg md:border-e">
