--- a/angular-app/src/app/pages/login/login.component.html
+++ b/angular-app/src/app/pages/login/login.component.html
@@ -3,7 +3,7 @@
       <div class="w-full bg-white rounded-lg shadow md:mt-0 sm:max-w-md xl:p-0">
           <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
               <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl">
-                  Sign in to your account
+                  Log in to your account
               </h1>
               <form class="space-y-4 md:space-y-6" action="#">
                   <div>
@@ -25,7 +25,7 @@
                       </div>
                       <a href="#" class="text-sm font-medium text-primary-600 hover:underline">Forgot password?</a>
                   </div>
-                  <button type="submit" class="log-in-button w-full text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center">Sign in</button>
+                  <button type="submit" class="log-in-button w-full text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center">Log in</button>
                   <p class="text-sm font-light text-gray-500">
                       Don’t have an account yet? <a href="#" class="font-medium text-primary-600 hover:underline">Sign up</a>
                   </p>
