--- a/angular-app/src/app/pages/signup/signup.component.html
+++ b/angular-app/src/app/pages/signup/signup.component.html
@@ -28,7 +28,7 @@
                   </div>
                   <button type="submit" class="sign-up-button w-full text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center">Create an account</button>
                   <p class="text-sm font-light text-gray-500">
-                      Already have an account? <a href="#" class="font-medium text-primary-600 hover:underline">Sign in here</a>
+                      Already have an account? <a href="#" class="font-medium text-primary-600 hover:underline">Log in here</a>
                   </p>
               </form>
           </div>
