--- a/angular-app/src/app/pages/login/login.component.html
+++ b/angular-app/src/app/pages/login/login.component.html
@@ -25,7 +25,7 @@
                       </div>
                       <a href="#" class="text-sm font-medium text-primary-600 hover:underline">Forgot password?</a>
                   </div>
-                  <button type="submit" class="log-in-button w-full text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center">Log in</button>
+                  <button type="submit" class="log-in-button w-full text-white focus:ring-4 focus:ring-4 focus:ring-gray-300 hover:opacity-90 font-medium rounded-lg text-sm px-5 py-2.5 text-center">Log in</button>
                   <p class="text-sm font-light text-gray-500">
                       Don’t have an account yet? <a href="#" class="font-medium text-primary-600 hover:underline">Sign up</a>
                   </p>
