--- a/angular-app/src/app/pages/signup/signup.component.html
+++ b/angular-app/src/app/pages/signup/signup.component.html
@@ -26,7 +26,7 @@
                         <label for="terms" class="font-light text-gray-500">I accept the <a class="font-medium text-primary-600 hover:underline" href="#">Terms and Conditions</a></label>
                       </div>
                   </div>
-                  <button type="submit" class="sign-up-button w-full text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center">Create an account</button>
+                  <button type="submit" class="sign-up-button w-full text-white focus:ring-4 focus:ring-4 focus:ring-gray-300 hover:opacity-90 font-medium rounded-lg text-sm px-5 py-2.5 text-center">Create an account</button>
                   <p class="text-sm font-light text-gray-500">
                       Already have an account? <a href="#" class="font-medium text-primary-600 hover:underline">Log in here</a>
                   </p>
