--- a/angular-app/src/app/pages/login/login.component.html
+++ b/angular-app/src/app/pages/login/login.component.html
@@ -23,11 +23,10 @@
                             <label for="remember" class="text-gray-500">Remember me</label>
                           </div>
                       </div>
-                      <a href="#" class="text-sm font-medium text-primary-600 hover:underline">Forgot password?</a>
                   </div>
                   <button type="submit" class="log-in-button w-full text-white focus:ring-4 focus:ring-4 focus:ring-gray-300 hover:opacity-90 font-medium rounded-lg text-sm px-5 py-2.5 text-center">Log in</button>
                   <p class="text-sm font-light text-gray-500">
-                      Don’t have an account yet? <a href="#" class="font-medium text-primary-600 hover:underline">Sign up</a>
+                      Don’t have an account yet? <a href="/signup" class="font-medium text-primary-600 hover:underline">Sign up</a>
                   </p>
               </form>
           </div>
