Add: user profile

--- a/angular-app/src/app/app.component.html
+++ b/angular-app/src/app/app.component.html
@@ -12,7 +12,7 @@
 
 </router-outlet>
 <!-- Render the navbar only if the current route is not 'shopping-cart' -->
-<app-footer *ngIf="!isShoppingCartRoute && !isNotFoundRoute"></app-footer>
+<app-footer *ngIf="!isShoppingCartRoute && !isNotFoundRoute && !isNotMyProfileRoute"></app-footer>
 
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
