Add: admin panel frontend structure

--- a/angular-app/src/app/app.component.html
+++ b/angular-app/src/app/app.component.html
@@ -9,7 +9,7 @@
 
 <app-navbar *ngIf="!isNotFoundRoute"></app-navbar>
 <router-outlet></router-outlet>
-<app-footer *ngIf="!isShoppingCartRoute && !isNotFoundRoute && !isNotMyProfileRoute && !isNotSignUpRoute && !isNotFoundRoute"></app-footer>
+<app-footer *ngIf="!isShoppingCartRoute && !isNotFoundRoute && !isNotMyProfileRoute && !isNotSignUpRoute && !isNotFoundRoute && !isNotAdminRoute"></app-footer>
 
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
