--- a/angular-app/src/app/components/navbar/navbar.component.html
+++ b/angular-app/src/app/components/navbar/navbar.component.html
@@ -4,7 +4,27 @@
       <span class="self-center text-2xl font-semibold whitespace-nowrap">Codehub</span>
   </a>
   <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
-      <a href="/signup" class="learn-more-button rounded-lg inline-flex items-center justify-center px-6 py-3 text-sm font-medium focus:ring-4 focus:ring-gray-300 hover:opacity-90">My Account</a>
+
+    <button id="dropdownDividerButton" data-dropdown-toggle="dropdownDivider" class="learn-more-button text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center" type="button">My Account<svg class="w-2.5 h-2.5 ms-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/>
+    </svg>
+    </button>
+
+      <!-- Dropdown menu -->
+      <div id="dropdownDivider" class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44">
+          <ul class="py-2 text-sm text-gray-700" aria-labelledby="dropdownDividerButton">
+            <li>
+              <a href="/my-profile" class="block px-4 py-2 hover:bg-gray-100">View Account</a>
+            </li>
+            <li>
+              <a href="" class="block px-4 py-2 hover:bg-gray-100">My Courses</a>
+            </li>
+          </ul>
+          <div class="py-2">
+            <a href="" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Sign Out</a>
+          </div>
+      </div>
+
       <button data-collapse-toggle="navbar-sticky" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200" aria-controls="navbar-sticky" aria-expanded="false">
         <span class="sr-only">Open main menu</span>
         <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
