--- a/angular-app/src/app/components/navbar/navbar.component.css
+++ b/angular-app/src/app/components/navbar/navbar.component.css
@@ -1,19 +1,21 @@
 .navbar-link {
-  box-shadow: inset 0 0 0 0 #2B2D42;
-  color: #2B2D42;
-  margin: 0 -.25rem;
-  padding: 0 .25rem;
-  transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
+  display: block;
+  padding: 10px 15px;
+  color: #333; /* Default text color */
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s, color 0.3s; /* Smooth transition effect */
 }
+
 .navbar-link:hover {
-  box-shadow: inset 100px 0 0 0 #2B2D42;
-  color: white;
+  background-color: #f0f0f0; /* Background color on hover */
+  color: #555; /* Text color on hover */
 }
 
 .learn-more-button  {
   background-color: #2B2D42;
   color: #FFFFFF;
-  font-size: 1rem;
+  font-size: 0.9rem;
   font-weight: 600;
   /* Media query for mobile devices */
   @media screen and (max-width: 700px) {
